refactor: question, answer repository -> service 수정